--- a/env-pod.yaml
+++ b/env-pod.yaml
@@ -3,7 +3,8 @@ kind: Pod
 metadata:
   name: evn-demo
   labels:
-    name: evn 
+    name: evn
+  namespace: dev  
 spec:
   containers:
     - name: nopc
