--- a/env-pod.yaml
+++ b/env-pod.yaml
@@ -1,10 +1,20 @@
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: dev
+  labels:
+    name: dev-demo
+
+---
+
 apiVersion: v1
 kind: Pod
 metadata:
   name: evn-demo
   labels:
     name: evn
-  namespace: dev  
+  namespace: dev-demo  
 spec:
   containers:
     - name: nopc
